--- a/izuho_omi_Birthday_2025/css/style.css
+++ b/izuho_omi_Birthday_2025/css/style.css
@@ -94,6 +94,11 @@ img{
    text-align: center;
    font-size: 22px;
 }
+.sns-item2{
+   text-align: left;
+   font-size: 22px;
+   margin-left: 20px;
+}
 
 /*フッター*/
 .footer{
