--- a/izuho_omi_Birthday_2025/css/style.css
+++ b/izuho_omi_Birthday_2025/css/style.css
@@ -95,9 +95,8 @@ img{
    font-size: 22px;
 }
 .sns-item2{
-   text-align: left;
+   text-align: center;
    font-size: 22px;
-   margin-left: 12px;
 }
 
 /*フッター*/
