--- a/izuho_omi_Birthday_2025/css/style.css
+++ b/izuho_omi_Birthday_2025/css/style.css
@@ -95,8 +95,9 @@ img{
    font-size: 22px;
 }
 .sns-item2{
-   text-align: center;
+   text-align: left;
    font-size: 22px;
+   padding: 15px;
 }
 
 /*フッター*/
