--- a/izuho_omi_Birthday_2025/css/style.css
+++ b/izuho_omi_Birthday_2025/css/style.css
@@ -96,8 +96,8 @@ img{
 }
 .sns-item2{
    text-align: left;
-   font-size: 22px;
-   padding: 40px;
+   font-size: 25px;
+   padding-left: 40px;
 }
 
 /*フッター*/
