--- a/izuho_omi_Birthday_2025/css/style.css
+++ b/izuho_omi_Birthday_2025/css/style.css
@@ -97,8 +97,8 @@ img{
 }
 .sns-item2{
    text-align: left;
-   font-size: 23px;
-   padding-left: 50px;
+   font-size: 22px;
+   padding-left: 50rem;
 }
 
 /*フッター*/
