--- a/izuho_omi_Birthday_2025/css/style.css
+++ b/izuho_omi_Birthday_2025/css/style.css
@@ -98,7 +98,7 @@ img{
    text-align: left;
    font-size: 22px;
    padding-left: 1.7rem;
-   margin: 30px auto 40px;
+   margin: 30px 40px;
 }
 
 /*フッター*/
