--- a/izuho_omi_Birthday_2025/css/style.css
+++ b/izuho_omi_Birthday_2025/css/style.css
@@ -97,7 +97,8 @@ img{
 .sns-item2{
    text-align: left;
    font-size: 22px;
-   margin: 10px 50px 20px;
+   margin: 10px 10px 10px 50px;
+   display: inline-block;
 }
 
 /*フッター*/
