--- a/izuho_omi_Birthday_2025/css/style.css
+++ b/izuho_omi_Birthday_2025/css/style.css
@@ -96,8 +96,8 @@ img{
 }
 .sns-item2{
    text-align: left;
-   font-size: 22px;
-   margin: 10px 10px 5px 60px;
+   font-size: 20px;
+   margin: 10px 10px 0 60px;
    display: inline-block;
 }
 
